[gd_scene load_steps=4 format=3 uid="uid://dhjm8msao1hfe"]

[ext_resource type="Script" uid="uid://clc1yb7lj7mec" path="res://Componentes/Bullets/EnemyBullet.gd" id="1_3oe5c"]
[ext_resource type="SpriteFrames" uid="uid://dm6h2s1d6kdd" path="res://SpriteSheets/Animacoes_Etc/Bullets.tres" id="2_ri6r2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uumvb"]
size = Vector2(1, 1)

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 11
script = ExtResource("1_3oe5c")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = ExtResource("2_ri6r2")
animation = &"bullet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
visibility_layer = 3
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_uumvb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.1, 0.1)

[node name="TimerEnemy" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerEnemy" to="." method="_on_timer_timeout"]
